--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@0,400;600&display=swap");
 @import "reset.css";
-@import "components/status-bar.css";
 @import "variables.css";
 
 /* components */
-
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
 /* screens */
 @import "screens/login.css";
 
