--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,19 @@
 /* components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
+@import "components/icon-row.css";
 /* screens */
 @import "screens/login.css";
-
+@import "screens/friend.css";
+@import "screens/find.css";
+@import "screens/more.css";
 body {
   font-family: "Open Sans", sans-serif;
+  color: #2e363e;
+}
+.main-screen {
+  margin: 0 var(--horizontal-space);
 }
